RM-9072 Fix broken scrollbar styling in Chrome/Edge

--- a/Remotion/ObjectBinding/Web/Res/Themes/NovaViso/HTML/BocAutoCompleteReferenceValue.UI.css
+++ b/Remotion/ObjectBinding/Web/Res/Themes/NovaViso/HTML/BocAutoCompleteReferenceValue.UI.css
@@ -18,8 +18,16 @@
   width: 100%;
   height: 100%;
   overflow: auto;
-  scrollbar-width: var(--remotion-themed-popup-scrollbar-style);
-  scrollbar-color: var(--remotion-themed-popup-scrollbar-color);
+}
+
+/* If either scrollbar-width`/`scrollbar-color` is specified, the `::-webkit-scrollbar` selectors won't work  */
+@supports not selector(::-webkit-scrollbar)
+{
+  .ac_results > div
+  {
+    scrollbar-width: var(--remotion-themed-popup-scrollbar-style);
+    scrollbar-color: var(--remotion-themed-popup-scrollbar-color);
+  }
 }
 
 .ac_results > div::-webkit-scrollbar-thumb
